--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -17,13 +17,14 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: 3.11
-        SECRET_KEY: ${{ secrets.SECRET_KEY }}
-        DJANGO_ALLOWED_HOSTS: ${{ secrets.DJANGO_ALLOWED_HOSTS }}
-        DEBUG: 1
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
+      env:
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        DJANGO_ALLOWED_HOSTS: ${{ secrets.DJANGO_ALLOWED_HOSTS }}
+        DEBUG: 1
       run: |
         python manage.py test
