--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dj-database-url = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
+flake8 = "^5.0.4"
 
 [build-system]
 requires = ["poetry-core"]
