--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dj-database-url = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
+python-dotenv = "^0.21.0"
 
 [build-system]
 requires = ["poetry-core"]
