--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,6 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install -r requirements.dev.txt
     - name: Run Tests
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
