--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "blog_site"}]
 python = "^3.11"
 Django = "^4.1.3"
 dj-database-url = "^1.0.0"
+markdown = "^3.4.1"
+pygments = "^2.13.0"
 
 
 [tool.poetry.group.dev.dependencies]
