--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ Django = "^4.1.3"
 dj-database-url = "^1.0.0"
 markdown = "^3.4.1"
 pygments = "^2.13.0"
+pillow = "^9.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
